[package]
name = "hyper-with-routerify"
version = "0.1.0"
authors = ["Rousan Ali <rousanali786@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
routerify="1.0"
http = "0.2"
regex = "1.3"
lazy_static = "1.4"
percent-encoding = "2.1"
tokio = { version = "0.2", features = ["full"] }